--- a/society.htm
+++ b/society.htm
@@ -96,7 +96,7 @@ world.addBody(wallBodyBottom);
 const maxBalls = 9000; // set the maximum number of balls
 const ballSize = 14;
 const dropInterval = 0.02; // declare dropInterval variable her
-const ballColors = ["#f0f0f0", "#ff0000", "#ff8c00", "#ffff00", "#000000", "#008000", "#0000ff", "#4b0082", "#00ffff", "#ff1493", "#00ff00", "#00bfff", "#9400d3", "#ff00ff", "#ff69b4", "#add8e6"];
+const ballColors = ["#f5f5dc", "#ff0000", "#ff8c00", "#ffff00", "#000000", "#008000", "#0000ff", "#4b0082", "#00ffff", "#ff1493", "#00ff00", "#00bfff", "#9400d3", "#ff00ff", "#ff69b4", "#add8e6"];
 
 function getBallColor() {
   return ballColors[Math.floor(Math.random() * ballColors.length)];
