Double pendulums now deletable

--- a/society.htm
+++ b/society.htm
@@ -734,6 +734,8 @@
           saveBallDataToFile()
         } else if (e.key.toLowerCase() === "y") {
           grayMask = !grayMask
+        } else if (e.key.toLowerCase() === "d") {
+          pendulums.length = 0;
         }
       })
     </script>
